Fix build for java 8